Implement teacher password visibility toggle and improve navigation
Added logic to TeacherLoginController and FXML to allow toggling password visibility using a separate text field. Updated WelcomePageController to load the correct login page based on role selection and handle errors gracefully. Cleaned up unused imports and improved code structure. Changed mainClass in pom.xml to WelcomePageApplication.

--- a/Mini-Moodle/pom.xml
+++ b/Mini-Moodle/pom.xml
@@ -129,7 +129,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.minimoodle/com.example.minimoodle.HelloApplication</mainClass>
+              <mainClass>com.example.minimoodle/com.example.minimoodle.WelcomePageApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
